ajout des projets

--- a/index.html
+++ b/index.html
@@ -84,46 +84,36 @@
       Vous cherchez un Développeur Web ?</h2>
       <p class="wow slideInLeft" data-wow-duration="2s" data-wow-delay="450ms" data-wow-offset="200">
       Ça tombe bien ! Je suis passionné par le web et je suis actuellement une formation de Développeur Web
-        au sein de <a class="js-scrollTo" href="#" target="new">BeWeb</a>.
+        au sein de <a class="js-scrollTo" href="#" target="new">BeWeb</a>. J'aime expérimenter, découvrir et apprendre au fur et à mesure.
+      <a href="#contact">Contactez</a> moi et jetez un coup d'oeil à <a href="#realisation">mes réalisations.</a></p></br>
 
-        Si mon profil vous intéresse n'hésitez pas à me <a href="#contact">contacter</a> et à regarder
-        <a href="#realisation">mes réalisations.</a></p></br>
-    <img id="profil" class="wow zoomIn" data-wow-duration="2s" data-wow-delay="850ms" data-wow-offset="300" src="./portfolio/image/logo_tete.png" alt="Photo de profil" />
-
-    <h3 class=" wow bounceInUp" data-wow-duration="1s" data-wow-delay="850ms">A propos de moi</h3>
-
-    <p id="apropos" class=" wow bounceInUp" data-wow-duration="2s" data-wow-delay="1050ms">
-      J'aime expérimenter, découvrir et apprendre au fur et à mesure de mes projets pros et perso.
-    </p>
+    <h3 class=" wow bounceInUp" data-wow-duration="1s" data-wow-delay="850ms">On parle de moi</h3>
     <div class="automatic-slider">
     	<ul>
     		<li><p class="wow bounceInUp" data-wow-duration="1s" data-wow-delay="850ms">
-          Jonathan est super, beau, gentil, il travaille bien. C'est mon idole. Un talent inné, c'est le meilleur.
-        Une sorte de Dieu du développement c'est pour tout ça qu'il faut l'embaucher. Ah oui il sent super bon aussi.
-        </p>
-        <p class=" nomclient wow bounceInUp" data-wow-duration="1s" data-wow-delay="850ms">
-          <em>Séverine Saint-Martin, Directrice BeWeb, Directrice heureuse</em></p></li>
 
-    		<li><p class="wow bounceInUp" data-wow-duration="1s" data-wow-delay="850ms">
-          Jonathan est super, beau, gentil, il travaille bien. C'est mon idole. Un talent inné, c'est le meilleur.
-        Une sorte de Dieu du développement c'est pour tout ça qu'il faut l'embaucher. Ah oui il sent super bon aussi.
-        </p>
-        <p class=" nomclient wow bounceInUp" data-wow-duration="1s" data-wow-delay="850ms">
-          <em>Loic Derrieux, Formateur BeWeb, Formateur heureux</em></p></li>
+J'ai la chance de collaborer avec Jonathan depuis avril 2016 sur des projets d'intégration de sites web mais aussi plus globalement sur l’ensemble des projets de partenariat concernant notre fabrique coopérative numérique.
 
-    		<li><p class="wow bounceInUp" data-wow-duration="1s" data-wow-delay="850ms">
-          Jonathan est super, beau, gentil, il travaille bien. C'est mon idole. Un talent inné, c'est le meilleur.
-        Une sorte de Dieu du développement c'est pour tout ça qu'il faut l'embaucher. Ah oui il sent super bon aussi.
-        </p>
-        <p class=" nomclient wow bounceInUp" data-wow-duration="1s" data-wow-delay="850ms">
-          <em>Maddyson Weppe, BeWeb</em></p></li>
+Sérieux, impliqué, toujours constructif, Jonathan est un vrai atout dans une équipe et s'adapte parfaitement à différents projets.
 
-          <li><p class="wow bounceInUp" data-wow-duration="1s" data-wow-delay="850ms">
-            Jonathan est super, beau, gentil, il travaille bien. C'est mon idole. Un talent inné, c'est le meilleur.
-          Une sorte de Dieu du développement c'est pour tout ça qu'il faut l'embaucher. Ah oui il sent super bon aussi.
-          </p>
+En plus d’être fiable et responsable, tant dans son travail que dans ses rapports avec ses collègues, il est sympathique et toujours de bonne humeur.
+
+Il s’est naturellement imposé en tant que Community Manager et possède un vrai talent pour les relations publiques.
+
+Bref, chanceux sont ceux qui ont, auront, le plaisir de travailler avec lui !
+</p>
+        <p class=" nomclient wow bounceInUp" data-wow-duration="1s" data-wow-delay="850ms">
+          <em>Séverine SAINT-MARTIN, Directrice BeWeb</em></p></li>
+
+<li><p class="wow bounceInUp" data-wow-duration="1s" data-wow-delay="850ms">
+
+  Un collaborateur qui prend à cœur toute entreprise qu’il mène. Jonathan prend des initiatives et les assume. Il a porté sa responsabilité de délégué au niveau d’exigence requis.
+  C’est pour apporter le savoir à ce genre de talents, que le métier de formateur est si gratifiant.
+  </p>
           <p class=" nomclient wow bounceInUp" data-wow-duration="1s" data-wow-delay="850ms">
-            <em>Jonathan Fournival, eleve BeWeb</em></p></li>
+            <em>Loïc DERRIEUX – Formateur Développement Web, BeWeb</em></p></li>
+
+
     	</ul>
     </div>
     </div>
@@ -167,17 +157,17 @@
     <h2 class="wow bounceInUp" data-wow-duration="600ms" data-wow-delay="450ms">Expériences professionnelles</h2>
 
     <div id="expmobile">
-      <h3>Community Manager</h3>
+      <h3>Développeur web & Community Manager</h3>
       <em>Avril 2016 à Novembre 2016,BEWEB, Lunel</em>
 
       <h3>Opérateur de Réception</h3>
-      <em>Intérim d'Avril 2014 à Avril 2016, FIBRE EXCELLENCE(Tarascon)</em>
+      <em>De 2014 à 2016, FIBRE EXCELLENCE(Tarascon)</em>
 
       <h3>Responsable location</h3>
-      <em>Intérim Janvier 2014 LOXAM, Fos sur Mer.</em>
+      <em>2014 LOXAM, Fos sur Mer.</em>
 
       <h3>Conseiller de vente</h3>
-      <em>CDD NORAUTO Juin 2014, Les Angles.</em>
+      <em>2014 NORAUTO, Les Angles.</em>
 
       <h3>Attaché Commercial</h3>
       <em>Contrat de professionalisation Janvier 2011 à Août 2012, STORES MICHEL, Nîmes</em>
@@ -211,12 +201,15 @@
   		<div class="events-content">
   			<ol>
   				<li class="selected" data-date="16/01/2014">
-  					<h3>Community Manager</h3>
-  					<em>Avril 2016 à Novembre 2016,BEWEB, Lunel</em>
+  					<h3>Développeur Web & Community Manager</h3>
+  					<em>Avril 2016 à Novembre 2016, BEWEB, Lunel</em>
   					<p>
-               Missions : Je suis chargé de représenter BeWeb sur les réseaux sociaux. Je gère donc le compte Twitter
-               ainsi que le compte Facebook de Beweb.<br><br>
-               Compétences pour ce poste : Qualités rédactionnelles, fiabilité, réactivité et sociabilité.
+               Missions : Création de projets Web, analyse des besoins, respect du cahier des charges, gestion de projets.</br></br>
+
+               Je suis également Community Manager, je suis chargé de représenter BeWeb sur les réseaux sociaux. Je gère donc le compte Twitter
+               ainsi que le compte Facebook de BeWeb.<br><br>
+               Compétences pour ces postes : Qualités rédactionnelles, fiabilité, réactivité et sociabilité(Community Manager). Rigeur, adaptabilité, esprit d'équipe, culture Web.</br></br>
+               Outils utilisés : Linux, Github, Netbeans, Framapad, Trello...
 
             </p>
             <a href="https://www.facebook.com/BewebLunel" target="new">
@@ -230,30 +223,30 @@
           <li data-date="28/03/2014">
   					<!-- event description here -->
   					<h3>Opérateur de Réception</h3>
-  					<em>Intérim d'Avril 2014 à Avril 2016, FIBRE EXCELLENCE(Tarascon)</em>
-  					<p>
-              Activité : Production pâte à papier.<br>
+  					<em>2014 à Avril 2016, FIBRE EXCELLENCE à Tarascon</em>
+            <p>
+              Activité : Production pâte à papier.<br><br>
 
-              Mission : Accueil physique et téléphonique, saisie informatique, gestion de planning,
-              contrôle quantitatif et qualitatif du bois.
+              Missions : Accueil physique et téléphonique, saisie informatique, gestion de planning,
+              contrôle quantitatif et qualitatif du bois.<br><br>
 
-              Compétences acquises : Esprit d'équipe, rigueur et sens relationnel.<br>
+              Compétences acquises : Esprit d'équipe, rigueur et sens relationnel.<br><br>
               Logiciels utilisés : SIF (systeme informatique forestier sur la base du logiciel Oracle) Word et Excel.
-            </p>
+  				  </p>
   				</li>
 
           <li data-date="28/04/2014">
   					<!-- event description here -->
   					<h3>Responsable location puis Conseiller de Vente</h3>
-  					<em>Intérim Janvier 2014 LOXAM, Fos sur Mer.</em>
+  					<em>2014, LOXAM à Fos sur Mer.</em>
 
   					<p>
             Activité LOXAM: Location de matériel pour BTP, Industrie etc.</p>
-            <em>CDD NORAUTO Juin 2014, Les Angles.</em>
+            <em>2014, NORAUTO à Les Angles.</em>
             <p>
             Activité NORAUTO: Location de matériel pour BTP, Industrie etc.<br><br>
 
-            Mission : Accueil client, gestion du planning et des réservations,
+            Missions : Accueil client, gestion du planning et des réservations,
             relance téléphonique, réalisation de bons de commandes, mailing, création de contrat.<br><br>
 
             Compétences acquises : Sens relationnel, adaptabilité et réactivité.
@@ -263,12 +256,13 @@
           <li data-date="28/05/2014">
   					<!-- event description here -->
   					<h3>Attaché Commercial</h3>
-  					<em>Contrat de professionalisation Janvier 2011 à Août 2012, STORES MICHEL, Nîmes</em>
+  					<em>Contrat de professionalisation 2010 à 2012, STORES MICHEL, Nîmes</em>
 
   					<p>
+              Activité : Commercialisation de stores, volets roulants et fenêtres.<br><br>
                Missions : Accueil physique et téléphonique, réalisation de bons de commandes,réalisation de projets
                commerciaux, prospection téléphonique/physique, mailing, création d’offres promotionnelles
-               ainsi que de fidélisation.
+               ainsi que de fidélisation.<br><br>
 
                Logiciels utilisés : Word et Excel.
             </p>
@@ -277,11 +271,11 @@
           <li data-date="28/06/2014">
   					<!-- event description here -->
   					<h3>Opérateur de Réception</h3>
-  					<em>Intérim Juillet 2010 à Décembre 2010, FIBRE EXCELLENCE(Tarascon)</em>
+  					<em>2010, FIBRE EXCELLENCE(Tarascon)</em>
   					<p>
               Activité : Production pâte à papier.<br><br>
 
-              Mission : Accueil physique et téléphonique, saisie informatique, gestion de planning,
+              Missions : Accueil physique et téléphonique, saisie informatique, gestion de planning,
               contrôle quantitatif et qualitatif du bois.<br><br>
 
               Compétences acquises : Esprit d'équipe, rigueur et sens relationnel.<br><br>
@@ -303,7 +297,9 @@
 <div class="competence">
 
   <h2 class="wow bounceInUp" data-wow-duration="600ms" data-wow-delay="450ms"data-wow-offset="200">Compétences</h2>
-    <h3 class="wow bounceInUp" data-wow-duration="600ms" data-wow-delay="450ms"data-wow-offset="200">Framework</h3>
+
+  <p></p></br></br>
+    <h3 class="wow bounceInUp" data-wow-duration="600ms" data-wow-delay="450ms"data-wow-offset="200">Frameworks utilisés</h3>
 <img class="logoskill wow rotateIn" data-wow-duration="600ms" data-wow-delay="450ms" data-wow-offset="200"
 src="./portfolio/image/logo_bootstrap.png" alt="logo bootstrap" />
 <img class="logoskill wow rotateIn" data-wow-duration="1200ms" data-wow-delay="450ms" data-wow-offset="200"
@@ -311,13 +307,11 @@ src="./portfolio/image/logo_symfony.png" alt="logo symfony" />
 <img class="logoskill wow rotateIn" data-wow-duration="1200ms" data-wow-delay="450ms" data-wow-offset="200"
 src="./portfolio/image/logo_sass.png" alt="logo sass" />
 <img class="logoskill wow rotateIn" data-wow-duration="600ms" data-wow-delay="450ms" data-wow-offset="200"
-src="./portfolio/image/logo_angular.png" alt="logo angular" />
-<img class="logoskill wow rotateIn" data-wow-duration="600ms" data-wow-delay="450ms" data-wow-offset="200"
-src="./portfolio/image/logo_cordova.png" alt="logo cordova" />
+src="./portfolio/image/logo_jquery.png" alt="logo jquery" />
 
 <!--.........................FRONT................-->
   <section id="front">
-    <h4 class="wow bounceInUp" data-wow-duration="600ms" data-wow-delay="150ms">Front</h4>
+    <h4 class="wow bounceInUp" data-wow-duration="600ms" data-wow-delay="150ms">Langages Front-End utilisés</h4>
     <!-- ICI LOGO LANGAGE -->
     <img class="logoskill wow rotateIn" data-wow-duration="600ms" data-wow-delay="450ms" data-wow-offset="200"
     src="./portfolio/image/logo_html.png" alt="logo html" />
@@ -325,21 +319,19 @@ src="./portfolio/image/logo_cordova.png" alt="logo cordova" />
     src="./portfolio/image/logo_css.png" alt="logo css" />
     <img class="logoskill wow rotateIn" data-wow-duration="600ms" data-wow-delay="450ms" data-wow-offset="200"
     src="./portfolio/image/logo_javascript.png" alt="logo javascript" />
-    <img class="logoskill wow rotateIn" data-wow-duration="600ms" data-wow-delay="450ms" data-wow-offset="200"
-    src="./portfolio/image/logo_jquery.png" alt="logo jquery" />
+
   </section>
 
 <!--.........................BACK.................-->
   <section id="back">
-    <h4 class="wow bounceInUp" data-wow-duration="600ms" data-wow-delay="450ms"data-wow-offset="100">Back</h4>
+    <h4 class="wow bounceInUp" data-wow-duration="600ms" data-wow-delay="450ms"data-wow-offset="100">Langages Back-End utilisés</h4>
     <!-- ICI LOGO LANGAGE -->
     <img class="logoskill wow rotateIn" data-wow-duration="600ms" data-wow-delay="450ms" data-wow-offset="200"
     src="./portfolio/image/logo_php.png" alt="logo php" />
     <img class="logoskill wow rotateIn" data-wow-duration="600ms" data-wow-delay="450ms" data-wow-offset="200"
     src="./portfolio/image/logo_sql.png" alt="logo sql" />
-    <img class="logoskill wow rotateIn" data-wow-duration="600ms" data-wow-delay="450ms" data-wow-offset="200"
-    src="./portfolio/image/logo_nodejs.png" alt="logo node js" />
-  </section>
+  </section></br></br>
+  <p>Pour développer j'utilise Linux ainsi que l'IDE Netbeans.</p>
   </div>
 
   </section>
@@ -351,13 +343,13 @@ src="./portfolio/image/logo_cordova.png" alt="logo cordova" />
 
     <p>
 La meilleure façon de faire du bon travail est d’aimer ce que l'on fait. Je suis fier de tous mes projets, petits et grands,
-car ils m'ont tous permis d'apprendre quelques choses et de pousser mes limites.
+car ils m'ont tous permis d'apprendre et de pousser mes limites.
 Pour faire un excellent travail , je suis constamment à la recherche de nouveaux défis et possibilités d'amélioration.
-Déterminé à travailler plus dur et plus fort vers la perfection.
+Déterminé à travailler plus dur et plus fort.
     </p>
 
     <!--..........ICI UN ECRAN......-->
-    <a href="projets.html"><img id="ordi" src="./portfolio/image/ordi2.png" alt="Mes projets" /></a>
+    <a href="./page_projet/projets.html"><img id="ordi" src="./portfolio/image/ordi2.png" alt="Mes projets" /></a>
 
 
 
@@ -425,7 +417,7 @@ Déterminé à travailler plus dur et plus fort vers la perfection.
 
       <!--ICONE FLECHE LOCALISATION-->
     	<img class="imgcontact" src="./portfolio/image/icone/gps.png" alt="adresse" /><br>
-      <p>40 Rue de la redoute 30 300 Beaucaire</p>
+      <p>Beaucaire / Montpellier</p>
       <!--ICONE TELEPHONE-->
     	<img class="imgcontact" src="./portfolio/image/icone/apple.png" alt="tel" /><br>
       <p>06.19.85.33.15</p>
