Changement texte emploi

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ Bref, chanceux sont ceux qui ont, auront, le plaisir de travailler avec lui !
       <h3>Développeur web & Community Manager</h3>
       <em>Avril 2016 à Novembre 2016,BEWEB, Lunel</em>
 
-      <h3>Opérateur de Réception</h3>
+      <h3>Assistant Logistique</h3>
       <em>De 2014 à 2016, FIBRE EXCELLENCE(Tarascon)</em>
 
       <h3>Responsable location</h3>
@@ -222,7 +222,7 @@ Bref, chanceux sont ceux qui ont, auront, le plaisir de travailler avec lui !
 
           <li data-date="28/03/2014">
   					<!-- event description here -->
-  					<h3>Opérateur de Réception</h3>
+  					<h3>Assistant Logistique</h3>
   					<em>2014 à Avril 2016, FIBRE EXCELLENCE à Tarascon</em>
             <p>
               Activité : Production pâte à papier.<br><br>
@@ -270,7 +270,7 @@ Bref, chanceux sont ceux qui ont, auront, le plaisir de travailler avec lui !
 
           <li data-date="28/06/2014">
   					<!-- event description here -->
-  					<h3>Opérateur de Réception</h3>
+  					<h3>Assistant Logistique</h3>
   					<em>2010, FIBRE EXCELLENCE(Tarascon)</em>
   					<p>
               Activité : Production pâte à papier.<br><br>
@@ -349,7 +349,8 @@ Déterminé à travailler plus dur et plus fort.
     </p>
 
     <!--..........ICI UN ECRAN......-->
-    <a href="./page_projet/projets.html"><img id="ordi" src="./portfolio/image/ordi2.png" alt="Mes projets" /></a>
+    <a href="./page_projet/projets.html"><img id="ordi" src="./portfolio/image/ordi.png" alt="Mes projets" /></a>
+
 
 
 
