--- a/index.html
+++ b/index.html
@@ -18,17 +18,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, user-scalable=no">
   <title>Jonathan Gomez || Développeur Web</title>
   <link rel="icon" type="image/png" href= "./portfolio/image/logo_tete.png"/>
+  <!--implémentation des animations-->
   <link rel="stylesheet" href="./portfolio/css/animate.css">
+  <!--implémentation des hover-->
   <link rel="stylesheet" href="./portfolio/css/imagehover.css">
+  <!--implémentation du css pour le switch de mes expériences professionnelles-->
   <link rel="stylesheet" href="./portfolio/css/unslider.css">
     <link rel="stylesheet" href="./portfolio/css/unslider-dots.css">
   <link rel="stylesheet" href="./portfolio/css/normalize.css">
   <link rel="stylesheet" href="./portfolio/css/main.css">
-
+  <!--implémentation de la police via google font-->
   <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+  <!--implémentation des animations wow-->
   <script src="./portfolio/script/wow.min.js"></script>
   <script src="./portfolio/script/script.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <!--implémentation de la smoothscroll-->
   <script src="./portfolio/script/smoothscroll.js"></script>
 
 
@@ -42,7 +47,7 @@
 
 		<li><a href="#accueil">Home</a></li>
 		<li><a class="js-scrollTo" href="#presentation">About me</a></li><!-- ma présentation cool-->
-		<li><a class="js-scrollTo" href="#formation">Parcours</a></li> <!--Formations, expèriences et compétences-->
+		<li><a class="js-scrollTo" href="#formation">Parcours</a></li> <!--Formations, expériences et compétences-->
 		<li><a class="js-scrollTo" href="#realisation">Work</a></li><!--Mes réalisations-->
 		<li><a class="js-scrollTo" href="#contact">Contact</a></li>
 
@@ -71,7 +76,7 @@
 
     <h1 class="wow bounceInDown" data-wow-duration="3s" data-wow-delay="500ms">
       Bienvenue sur mon Portfolio</h1>
-    <h2 class="wow bounceInDown"data-wow-duration="3s" data-wow-delay="500ms">Jonathan Gomez Développeur Web</h2>
+    <h2 class="wow bounceInDown" data-wow-duration="3s" data-wow-delay="500ms">Jonathan Gomez Développeur Web</h2>
     <a class="js-scrollTo" href="#presentation">
       <img class="fleche wow infinite bounce" data-wow-duration="2s" data-wow-delay="1500ms"
       src="./portfolio/image/icone/arrows.png" alt="fleche" /></a>
@@ -85,9 +90,11 @@
       <p class="wow slideInLeft" data-wow-duration="2s" data-wow-delay="450ms" data-wow-offset="200">
       Ça tombe bien ! Je suis passionné par le web et je suis actuellement une formation de Développeur Web
         au sein de <a class="js-scrollTo" href="#" target="new">BeWeb</a>. J'aime expérimenter, découvrir et apprendre au fur et à mesure.
-      <a href="#contact">Contactez</a> moi et jetez un coup d'oeil à <a href="#realisation">mes réalisations.</a></p></br>
+      <a href="#contact">Contactez</a> moi et jetez un coup d'oeil à <a href="#realisation">mes réalisations.</a></p><br>
 
     <h3 class=" wow bounceInUp" data-wow-duration="1s" data-wow-delay="850ms">On parle de moi</h3>
+
+    <!--ici j'appele la classe qui automatic slider qui me permet de switcher les témoignages-->
     <div class="automatic-slider">
     	<ul>
     		<li><p class="wow bounceInUp" data-wow-duration="1s" data-wow-delay="850ms">
@@ -116,7 +123,7 @@ Bref, chanceux sont ceux qui ont, auront, le plaisir de travailler avec lui !
 
     	</ul>
     </div>
-    </div>
+
 
 
   </section>
@@ -127,25 +134,25 @@ Bref, chanceux sont ceux qui ont, auront, le plaisir de travailler avec lui !
   <section id="formation">
     <h2 class="wow bounceInDown" data-wow-duration="600ms" data-wow-delay="350ms" data-wow-offset="300">Formation/Diplôme</h2>
 
-    <div id="devweb" class="wow bounceInUp" data-wow-duration="600ms" data-wow-delay="400ms"data-wow-offset="300">
+    <div id="devweb" class="wow bounceInUp" data-wow-duration="600ms" data-wow-delay="400ms" data-wow-offset="300">
       <img class="iconeetude" src="./portfolio/image/icone/computer.png" alt="devweb" />
     <h4>Développeur Web Mobile</h4>
-    <article>BeWeb Lunel</article>
+    <p>BeWeb Lunel</p>
     <p>2016<p>
   </div>
 
-    <div id="nrc" class="wow bounceInLeft" data-wow-duration="600ms" data-wow-delay="350ms"data-wow-offset="100">
-    <img class="iconeetude"src="./portfolio/image/icone/business-1.png" alt="Vente" />
-    <img class="iconeetude"src="./portfolio/image/icone/diplome.png" alt="diplome" />
+    <div id="nrc" class="wow bounceInLeft" data-wow-duration="600ms" data-wow-delay="350ms" data-wow-offset="100">
+    <img class="iconeetude" src="./portfolio/image/icone/business-1.png" alt="Vente" />
+    <img class="iconeetude" src="./portfolio/image/icone/diplome.png" alt="diplome" />
     <h4>BTS Négociation Relation Client</h4>
-    <article>Rise Montpellier</article>
+    <p>Rise Montpellier</p>
     <p>2012</p>
   </div>
 
-    <div id="bac" class="wow bounceInRight" data-wow-duration="600ms" data-wow-delay="350ms"data-wow-offset="100">
+    <div id="bac" class="wow bounceInRight" data-wow-duration="600ms" data-wow-delay="350ms" data-wow-offset="100">
     <img class="iconeetude" src="./portfolio/image/icone/diplome.png" alt="diplome" />
     <h4>BAC STG Marketing</h4>
-    <article>Lycée Alphonse Daudet Tarascon</article>
+    <p>Lycée Alphonse Daudet Tarascon</p>
     <p>2010</p>
   </div>
 
@@ -156,6 +163,7 @@ Bref, chanceux sont ceux qui ont, auront, le plaisir de travailler avec lui !
   <section id="experience">
     <h2 class="wow bounceInUp" data-wow-duration="600ms" data-wow-delay="450ms">Expériences professionnelles</h2>
 
+<!--partie qui s'affiche quand c'est un mobile-->
     <div id="expmobile">
       <h3>Développeur web & Community Manager</h3>
       <em>Avril 2016 à Novembre 2016,BEWEB, Lunel</em>
@@ -173,7 +181,7 @@ Bref, chanceux sont ceux qui ont, auront, le plaisir de travailler avec lui !
       <em>Contrat de professionalisation Janvier 2011 à Août 2012, STORES MICHEL, Nîmes</em>
 
     </div>
-    <!--- ICI UNE FRISE-->
+    <!--ici la frise qui s'affiche quand c'est un écran de pc-->
 
     <section class="cd-horizontal-timeline">
   		<div class="timeline">
@@ -204,11 +212,11 @@ Bref, chanceux sont ceux qui ont, auront, le plaisir de travailler avec lui !
   					<h3>Développeur Web & Community Manager</h3>
   					<em>Avril 2016 à Novembre 2016, BEWEB, Lunel</em>
   					<p>
-               Missions : Création de projets Web, analyse des besoins, respect du cahier des charges, gestion de projets.</br></br>
+               Missions : Création de projets Web, analyse des besoins, respect du cahier des charges, gestion de projets.<br/><br/>
 
                Je suis également Community Manager, je suis chargé de représenter BeWeb sur les réseaux sociaux. Je gère donc le compte Twitter
                ainsi que le compte Facebook de BeWeb.<br><br>
-               Compétences pour ces postes : Qualités rédactionnelles, fiabilité, réactivité et sociabilité(Community Manager). Rigeur, adaptabilité, esprit d'équipe, culture Web.</br></br>
+               Compétences pour ces postes : Qualités rédactionnelles, fiabilité, réactivité et sociabilité(Community Manager). Rigeur, adaptabilité, esprit d'équipe, culture Web.<br/><br/>
                Outils utilisés : Linux, Github, Netbeans, Framapad, Trello...
 
             </p>
@@ -284,7 +292,7 @@ Bref, chanceux sont ceux qui ont, auront, le plaisir de travailler avec lui !
   				</li>
 
   			</ol>
-  		</div> <!-- .events-content -->
+  		</div> <!-- fin de frise-->
 
   	</section>
 
@@ -293,13 +301,15 @@ Bref, chanceux sont ceux qui ont, auront, le plaisir de travailler avec lui !
 
 
 
+
+
 <!--.........................COMPETENCES.................-->
 <div class="competence">
 
-  <h2 class="wow bounceInUp" data-wow-duration="600ms" data-wow-delay="450ms"data-wow-offset="200">Compétences</h2>
+  <h2 class="wow bounceInUp" data-wow-duration="600ms" data-wow-delay="450ms" data-wow-offset="200">Compétences</h2>
 
-  <p></p></br></br>
-    <h3 class="wow bounceInUp" data-wow-duration="600ms" data-wow-delay="450ms"data-wow-offset="200">Frameworks utilisés</h3>
+  <p></p><br/><br/>
+    <h3 class="wow bounceInUp" data-wow-duration="600ms" data-wow-delay="450ms" data-wow-offset="200">Frameworks utilisés</h3>
 <img class="logoskill wow rotateIn" data-wow-duration="600ms" data-wow-delay="450ms" data-wow-offset="200"
 src="./portfolio/image/logo_bootstrap.png" alt="logo bootstrap" />
 <img class="logoskill wow rotateIn" data-wow-duration="1200ms" data-wow-delay="450ms" data-wow-offset="200"
@@ -324,17 +334,16 @@ src="./portfolio/image/logo_jquery.png" alt="logo jquery" />
 
 <!--.........................BACK.................-->
   <section id="back">
-    <h4 class="wow bounceInUp" data-wow-duration="600ms" data-wow-delay="450ms"data-wow-offset="100">Langages Back-End utilisés</h4>
+    <h4 class="wow bounceInUp" data-wow-duration="600ms" data-wow-delay="450ms" data-wow-offset="100">Langages Back-End utilisés</h4>
     <!-- ICI LOGO LANGAGE -->
     <img class="logoskill wow rotateIn" data-wow-duration="600ms" data-wow-delay="450ms" data-wow-offset="200"
     src="./portfolio/image/logo_php.png" alt="logo php" />
     <img class="logoskill wow rotateIn" data-wow-duration="600ms" data-wow-delay="450ms" data-wow-offset="200"
-    src="./portfolio/image/logo_sql.png" alt="logo sql" />
-  </section></br></br>
-  <p>Pour développer j'utilise Linux ainsi que l'IDE Netbeans.</p>
-  </div>
-
+    src="./portfolio/image/logo_sql.png" alt="logo sql" /><br/><br/>
+    <p>Pour développer j'utilise Linux ainsi que l'IDE Netbeans.</p>
   </section>
+
+  </div>
 
   <!--...................MES REALISATIONS...........-->
 
@@ -363,6 +372,8 @@ Déterminé à travailler plus dur et plus fort.
 
       <div id="passion">
       <div class = "elementpassion">
+
+        <!--effet hover sur les images section loisir grâce aux class du fichier imagehover-->
       <figure class="imghvr-zoom-in"><img class="imgloisir" src="./portfolio/image/learningaddict.png" alt="livre">
         <figcaption>
           <h3>Learning addict</h3>
@@ -370,19 +381,18 @@ Déterminé à travailler plus dur et plus fort.
           <p>
             Je me suis lancé le défi de lire les
             <a class="personal"href="https://personalmba.com/best-business-books/" target="new">99 livres du Personal MBA</a>
-            (les meilleurs livres Business).</br></br>
+            (les meilleurs livres Business).<br/><br/>
 
-            Je suis membre de <a class="personal"href="http://www.toastmasters.org/" target="new">Toastmaster
+            Je suis membre de <a class="personal" href="http://www.toastmasters.org/" target="new">Toastmaster
             </a>, une association internationale dont l'objectif
             est d'aider ses membres à s'améliorer en matière de communication et de leadership par
-            la prise de parole en public.</br></br>
+            la prise de parole en public.<br/><br/>
 
             J'assiste régulièrement à des événements(Salon,conf...etc).
 
           </p>
         </figcaption>
       </figure>
-
     </div>
 
     <div class="elementpassion">
@@ -392,16 +402,17 @@ Déterminé à travailler plus dur et plus fort.
         <p>Je suis passionné de foot depuis tout jeune, je pratique ce sport depuis l'âge de 7 ans.
         Il m'a inculqué des valeurs comme l'esprit d'équipe, de compétition, la solidarité.
       Je suis également abonné au Stade Vélodrome(Olympique de Marseille). J'ai d'ailleurs un
-      <a class="personal"href="http://www.om-maniac.fr/">
+      <a class="personal" href="http://www.om-maniac.fr/">
         Blog</a>,
-        une page <a class="personal"href="https://www.facebook.com/OM.Maniac.13/" target="new">Facebook</a> et
-        un <a class="personal"href="https://twitter.com/ommaniac" target="new">Twitter</a> consacré à l'OM.</p>
-        <a class="personal"href="http://www.om-maniac.fr/" target="new">
+        une page <a class="personal" href="https://www.facebook.com/OM.Maniac.13/" target="new">Facebook</a> et
+        un <a class="personal" href="https://twitter.com/ommaniac" target="new">Twitter</a> consacré à l'OM.</p>
+        <a class="personal" href="http://www.om-maniac.fr/" target="new">
           <img id="ommaniac" src="./portfolio/image/om.maniac.png" alt="om maniac"></a>
       </figcaption>
     </figure>
 
   </div>
+</div>
 
 
 </section>
@@ -423,8 +434,9 @@ Déterminé à travailler plus dur et plus fort.
     	<img class="imgcontact" src="./portfolio/image/icone/apple.png" alt="tel" /><br>
       <p>06.19.85.33.15</p>
       <!--ICONE ENVELOPPE-->
-    	<img class="imgcontact" src="./portfolio/image/icone/web.png" alt="mail" /><br>
-      <p>jonathan.gomez.web@gmail.com</p>
+    	<a class="mail" href="mailto:jonathan.gomez.web@gmail.com">
+        <img class="imgcontact" src="./portfolio/image/icone/web.png" alt="mail" /></a><br>
+      <a class="mail" href="mailto:jonathan.gomez.web@gmail.com"><p>jonathan.gomez.web@gmail.com</p></a>
 
 
 
@@ -440,6 +452,7 @@ Déterminé à travailler plus dur et plus fort.
       <script src="./portfolio/script/jquery.mobile.custom.min.js"></script>
       <script src="./portfolio/script/main.js"></script> <!-- Resource jQuery -->
 
+<!--script pour appeler automatic-slider qui me permet de switcher les témoignages-->
       <script>
   $('.automatic-slider').unslider({
 autoplay: true
