ajout du projet site citation

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -370,7 +369,7 @@ Déterminé à travailler plus dur et plus fort.
                  <img src="./portfolio/image/premiercv.png" alt="" width="350" height="220">
                </div>
                <p class="descrip">
-                 <span>Donut Whole</span><br>
+                 <span>Premier CV</span><br>
                  HTML5 / CSS3
                </p>
              </div>
@@ -413,6 +412,19 @@ Déterminé à travailler plus dur et plus fort.
                </p>
              </div>
            </a>
+           <a class="lien" href="https://github.com/Jogomez13/SiteCitationSymfony" target="_blank">
+             <div class="projet">
+               <div class="capture">
+                 <img src="./portfolio/image/sitecitation.png" alt="" width="350" height="220">
+               </div>
+               <p class="descrip">
+                 <span>Site Citation</span><br>
+                 HTML5 / CSS3 /Bootstrap<br>
+                 PHP5 / SYMFONY2
+               </p>
+             </div>
+           </a>
+
          </div>
          </div>
        </div>
