changement image projet beweb

--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@ Déterminé à travailler plus dur et plus fort.
          </div>
          </div>
        </div>
-     </div>
+
 
   </section>
 
@@ -445,7 +445,7 @@ Déterminé à travailler plus dur et plus fort.
 
           <p>
             Je me suis lancé le défi de lire les
-            <a class="personal"href="https://personalmba.com/best-business-books/" target="new">99 livres du Personal MBA</a>
+            <a class="personal" href="https://personalmba.com/best-business-books/" target="new">99 livres du Personal MBA</a>
             (les meilleurs livres Business).<br/><br/>
 
             Je suis membre de <a class="personal" href="http://www.toastmasters.org/" target="new">Toastmaster
@@ -497,7 +497,7 @@ Déterminé à travailler plus dur et plus fort.
     	<img class="imgcontact" src="./portfolio/image/icone/apple.png" alt="tel" /><br>
       <p>06.19.85.33.15</p>
       <!--ICONE ENVELOPPE-->
-        <img class="imgcontact" src="./portfolio/image/icone/web.png" alt="mail" /></a><br>
+        <img class="imgcontact" src="./portfolio/image/icone/web.png" alt="mail" /><br>
       <a class="mail" href="mailto:jonathan.gomez.web@gmail.com"><p>jonathan.gomez.web@gmail.com</p></a>
 
 
